--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -35,12 +35,13 @@ jobs:
         run: cordova platform add android
         continue-on-error: true
 
-      - name: Build Android Release
+      - name: Build Android Debug
         working-directory: template_src
-        run: cordova build android --release
+        run: cordova build android --debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: template_src/platforms/android/app/build/outputs/**/*.apk
+          path: template_src/platforms/android/app/build/outputs/apk/debug/*.apk
+
