--- a/template_src/package.json
+++ b/template_src/package.json
@@ -11,5 +11,15 @@
     "ecosystem:cordova"
   ],
   "author": "SSMG4",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
+    }
+  }
 }
